Fixing nltk-download

--- a/Colab/StyleTTS2_Demo_LJSpeech.ipynb
+++ b/Colab/StyleTTS2_Demo_LJSpeech.ipynb
@@ -41,11 +41,11 @@
    "cell_type": "code",
    "source": [
     "%%shell\n",
-    "rm -rf StyleTTS2-LJSpeech/ StyleTTS2/\n",
     "git clone https://github.com/Vorgesetzter/StyleTTS2.git\n",
     "cd StyleTTS2\n",
     "pip install SoundFile torchaudio==2.4.1 munch torch==2.4.1 pydub pyyaml librosa nltk matplotlib accelerate transformers==4.40.2 phonemizer einops einops-exts tqdm typing-extensions git+https://github.com/resemble-ai/monotonic_align.git\n",
     "sudo apt-get install espeak-ng\n",
+    "python -m nltk.downloader all\n",
     "git-lfs clone https://huggingface.co/yl4579/StyleTTS2-LJSpeech\n",
     "mv StyleTTS2-LJSpeech/Models ."
    ],
